--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ro.ubb.bogdan</groupId>
-    <artifactId>Lab02</artifactId>
+    <groupId>Lab2</groupId>
+    <artifactId>Lab2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Lab02</name>
-    <url>http://maven.apache.org</url>
-
+    <name>Lab2</name>
+    <url>https://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -27,7 +26,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-
 
 </project>
